# c-examples

./: .gitignore  CMakeLists.txt  README.md  README_CMake.md  README_Java.md
c-base/: CMakeLists.txt  README.md  README_Java.md
c-base/src/: 01_variables.c  02_constants.c  03_printf.c  04_operators.c  05_statements.c  06_functions.c  07_io.c  08_binary.c  09_array.c  10_memory.c  99_main.c  my_practice.c
c-file/: Makefile
c-file/src/: main.c  output.txt
c-lib/: Makefile
c-lib/src/: main.c
c-memory/: Makefile
c-memory/src/: main.c
c-pointer/: CMakeLists.txt  README.md
c-pointer/src/: 01_pointer_basic.c  02_pointer_array.c  03_pointer_function.c  04_pointer_struct.c  06_pointer_pointer.c  07_arraylist.c  08_2d_array.c  main.c  my_practice.c
c-struct/: CMakeLists.txt
c-struct/src/: 01_struct_basic.c  02_struct_nested.c  03_struct_self_ref.c  04_struct_pointer.c  05_struct_union.c  main.c
